<resources>
    <string name="app_name">Hero Blade</string>
    <string name="welcome">HERO BLADE</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="log_out">Log out</string>
    <string name="start_game">Start Game</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="proceed">Continue</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="click_to_inspect">Click to inspect</string>
    <string name="error_empty">Please make sure all fields have been filled.</string>
    <string name="error_username_short">Please enter a longer user name.</string>
    <string name="error_email_invalid">Please enter a valid email address.</string>
    <string name="create_account_success">Account created successfully!</string>
    <string name="create_avatar">Create your avatar</string>
    <string name="create_avatar_instructions">It\'s time to create your avatar.\nUse the settings on the top of the screen to\nmake your avatar look like you.</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="login_success">Login successful!</string>
    <string name="login_failed">Login failed. Please make sure you are connected to the internet and that all your information is correct.</string>
    <string name="enter_email">Enter your registered email.</string>
    <string name="title_activity_maps">Map</string>
    <string name="play_services_failed_connection">Play services connection failed: ConnectionResult.getErrorCode() = </string>
    <string name="play_services_suspended_connection">Play services connection suspended</string>
    <string name="title_activity_settings">Settings</string>
    <string name="craft_success">You crafted a new %1$s  +%2$dXP</string>
    <string name="craft_fail">You can\'t craft a %1$s</string>
    <string name="quantity_string">x%1$d</string>
    <string name="level">Level: %1$d</string>
    <string name="level_small">Level</string>
    <string name="name_with_level">%1$s LVL: %2$d</string>
    <string name="requires">Requires: </string>
    <string name="enemies_left">Enemies Left: %1$d</string>
    <string name="enemy_appeared">Avoidroid %1$s has appeared.</string>
    <string name="attack_missed">%1$s tried to attack but missed!</string>
    <string name="pass_out">%1$s has lost the battle. %1$s has passed out.</string>
    <string name="out_of_weapons">%1$s is out of weapons. %1$s has lost.</string>
    <string name="chest_unlocked">%1$s Unlocked!</string>
    <string name="chest_unlocked_distance">Unlocks in: %1$skm</string>
    <string name="no_chests">Chests will appear here as you find them.</string>
    <string name="notify_chest">Your %1$s has been unlocked!</string>
    <string name="notify_chest_body">You walked %1$dkm. The %2$s has been opened.</string>
    <string name="name_with_damage">%1$s\'s %2$s did %3$d damage!</string>
    <string name="name_with_crit_damage">%1$s\'s %2$s did %3$d critical damage!</string>
    <string name="broken_weapon"> The weapon is broken!</string>
    <string name="broke_weapon">%1$s is broken and cannot be used.</string>
    <string name="grass_type">GRASS</string>
    <string name="water_type">WATER</string>
    <string name="fire_type">FIRE</string>
    <string name="web_service_url">http://192.168.0.87:8080/AnxietyWebApp/servlet/</string>
    <string name="crafting">Crafting</string>
    <string name="crafting_subtitle">Create potions from your items.</string>
    <string name="inventory">Inventory</string>
    <string name="help">Help</string>
    <string name="inventory_subtitle">Touch on a food item to consume.</string>
    <string name="items">Items</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="choose_item">Choose an item</string>
    <string name="cash_display">$%1$d</string>
    <string name="xp_display">XP: %1$d/%2$d</string>
    <string name="no_steps">This device does not support step tracking. You will not be able to open chests. :(</string>
    <string name="empty_inventory">Your inventory is empty.</string>
    <string name="empty_weapons">You have no weapons.</string>
    <string name="choose_weapon">Choose your weapon</string>
    <string name="weapon_index">Weapons found</string>
    <string name="null_location">Current location is null. Using defaults.</string>
    <string name="but_item">Choose an item to purchase</string>
    <string name="empty_list">There are no items in this list.</string>
    <string name="stored_weapons">Stored Weapons</string>
    <string name="equipped_weapons">Equipped Weapons</string>
    <string name="equip_weapon">Equip Weapon</string>
    <string name="unequip_weapon">Unequip Weapon</string>
    <string name="err_unequip_weapon">You must first unequip a weapon before this weapon can be equipped.</string>
    <string name="no_weapon_equipped">You have no weapons equipped.</string>
    <string name="no_weapon_stored">You have no weapons in storage.</string>
    <string name="no_sale_base_sword">You can\'t sell your starting weapon.</string>
    <string name="weapons_limit">You can equip up to 6 weapons.</string>
    <string name="stored_weapons_subtitle">These weapons are in storage.</string>
    <string name="result">result</string>
    <string name="used_item">%1$s used %2$s.</string>
    <string name="weapon_change">%1$s changed weapon to %2$s.</string>
    <string name="health_amount">HP: %1$d/%2$d</string>
    <string name="new_recipe">New Recipe Unlocked.</string>
    <string name="sad_help">Social Anxiety Help</string>
    <string name="feedback_survey">Thank you for taking part in the study this past week. You did great! As a final step, could you please fill out the exit survey? You\'ll need to enter your APP CODE:</string>
    <string name="go_back">Go Back</string>
    <string name="anxiety_question_1">I have difficulty making eye contact with others.</string>
    <string name="anxiety_question_2">I find it difficult mixing comfortably with the people I work with.</string>
    <string name="anxiety_question_3">I tense up if I meet an acquaintance on the street.</string>
    <string name="anxiety_question_4">I feel tense if I am alone with just one person.</string>
    <string name="anxiety_question_5">I have difficulty talking with other people.</string>
    <string name="anxiety_question_6">I find it difficult to disagree with another’s point of view.</string>
    <string name="anxiety_question_7">I get nervous that people are staring at me as I walk down the street.</string>
    <string name="anxiety_question_8">I worry about shaking or trembling when I’m watched by other people.</string>
    <string name="anxiety_question_9">I would get tense if I had to sit facing other people on a bus or train.</string>
    <string name="anxiety_question_10">I worry I might do something to attract the attention of other people.</string>
    <string name="anxiety_question_11">When in an elevator, I am tense if people look at me.</string>
    <string name="anxiety_question_12">I can feel conspicuous standing in a line.</string>
    <string-array name="anxiety_questions">
        <item>@string/anxiety_question_1</item>
        <item>@string/anxiety_question_2</item>
        <item>@string/anxiety_question_3</item>
        <item>@string/anxiety_question_4</item>
        <item>@string/anxiety_question_5</item>
        <item>@string/anxiety_question_6</item>
        <item>@string/anxiety_question_7</item>
        <item>@string/anxiety_question_8</item>
        <item>@string/anxiety_question_9</item>
        <item>@string/anxiety_question_10</item>
        <item>@string/anxiety_question_11</item>
        <item>@string/anxiety_question_12</item>
    </string-array>
    <string-array name="mini_spin">
        <item>@string/mini_spin_1</item>
        <item>@string/mini_spin_2</item>
        <item>@string/mini_spin_3</item>
    </string-array>
    <string name="mini_spin_1">(1/3) Fear of embarrassment causes me to avoid doing things or speaking to people.</string>
    <string name="mini_spin_2">(2/3) I avoid activities in which I am the center of attention.</string>
    <string name="mini_spin_3">(3/3) Being embarrassed or looking stupid are among my worst fears.</string>
    <string name="help_welcome_screen_1">First off, THANK YOU for taking part in this study! Welcome to Hero Blade (working title). This is a location-based adventure game which will assess your levels of physical and social activity over the next week.</string>
    <string name="help_welcome_screen_2">Before continuing, please answer this 5 question survey. In the survey are a few questions related to the study. You\'ll need to enter your APP CODE: </string>
    <string name="help_welcome_screen_3">Great! The aim of this study is to explore the connection between mood, anxiety and physical activity through games. But mainly, it\'s a bit of fun. So enough jibber jabber, here we go. :)</string>
    <string-array name="help_welcome_screens">
        <item>@string/help_welcome_screen_1</item>
        <item>@string/help_welcome_screen_2</item>
        <item>@string/help_welcome_screen_3</item>
    </string-array>
    <string name="help_weapon_screen_1">Looking good! Now you\'re officially ready to start playing! But wait, you\'ll need an epic weapon before you head out into the world. I\'ve got just the thing!</string>
    <string name="help_weapon_screen_2">Here, I found this tree branch, but you can have it. It\'s been placed in your inventory. This will help fend off the baddies. You\'ll gather more weapons along your journey.</string>
    <string name="help_weapon_screen_3">Okay, now I\'m sure you\'re definitely ready. It\'s time to take a look at the MAP.</string>
    <string-array name="help_weapon_screens">
        <item>@string/help_weapon_screen_1</item>
        <item>@string/help_weapon_screen_2</item>
        <item>@string/help_weapon_screen_3</item>
    </string-array>
    <string name="help_map_screen_1">Behold, the Map screen! This shows you what\'s around you (obviously). Updates will happen as you travel, and markers will pop up here when you go to new places! You will pick up items as you walk.</string>
    <string name="help_map_screen_2">You can double tap to zoom in, or rotate using two fingers. You can keep this screen open while you walk (stay observant), or open it when you visit a shop or place of interest.</string>
    <string name="help_map_screen_3">There are bandits lurking around the map. You can battle these bandits when you are close, just make sure you have some weapons ready.</string>
    <string name="what_is_your_name">Let\'s get started.\nWhat is your name?</string>
    <string name="time_to_walk">Time to walk!</string>
    <string name="move_avatar">Move in the real world to move your avatar.</string>
    <string name="talk">Talk</string>
    <string name="buy_items">Buy Items</string>
    <string name="sell_items">Sell Items</string>
    <string name="leave">Leave</string>
    <string name="ans_0">Not at all</string>
    <string name="ans_1">A little bit</string>
    <string name="ans_2">Somewhat</string>
    <string name="ans_3">Very much</string>
    <string name="ans_4">Extremely</string>
    <string name="chest_unlock_title">Your treasure chest has been unlocked!</string>
    <string name="scroll_for_rewards">Scroll down to see rewards!</string>
    <string name="active_chests">Active Chests</string>
    <string name="active_chests_subtitle">Chests contain treasures which can be unlocked by walking certain distances.</string>
</resources>