<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.ul.postgrad.socialanxietyapp.screens.VillageActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/character_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_options"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:columnCount="6"
            android:orientation="vertical"
            android:rowCount="1">

            <Button
                android:id="@+id/ans_4"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:padding="5dp"
                android:background="@color/secondary_color_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ans_4" />

            <Button
                android:id="@+id/ans_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:background="@color/secondary_color_trans"
                android:layout_weight="1"
                android:text="@string/ans_3" />

            <Button
                android:id="@+id/ans_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/secondary_color_trans"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/ans_2" />

            <Button
                android:id="@+id/ans_1"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color_trans"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:text="@string/ans_1" />

            <Button
                android:id="@+id/ans_0"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color_trans"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/ans_0" />

            <Button
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@color/secondary_color_trans"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/go_back" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@drawable/dialogue_box_bg">

        <LinearLayout
            android:id="@+id/text_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/speaker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:background="@color/secondary_color"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/next" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/option_menu"
            android:background="@drawable/dialogue_box_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/talk_button"
                    android:layout_width="0dp"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textColor="@color/gray"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/talk" />

                <View
                    android:layout_width="2dp"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/buy_button"
                    android:layout_width="0dp"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_weight=".5"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/buy_items" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/run_button"
                    android:background="@color/transparent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_weight=".5"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/leave" />

                <View
                    android:layout_width="2dp"
                    android:background="@color/gray"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/sell_button"
                    android:layout_width="0dp"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_weight=".5"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/sell_items" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
