<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="ie.ul.postgrad.socialanxietyapp.screens.TimeToWalkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/google_sign_in_button"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/time_to_walk"
            android:textColor="#404040"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/walking"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:text="@string/move_avatar"
            android:textColor="#404040"
            android:textSize="16sp" />

        <Button
            android:id="@+id/continue_button"
            android:text="@string/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
