<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/google_sign_in_button"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context="ie.ul.postgrad.socialanxietyapp.screens.ChestOpenActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/chest_unlocked"
                android:id="@+id/chest_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/chest_unlock_title"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/scroll_for_rewards"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/cash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <LinearLayout

                android:id="@+id/reward_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/proceed" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
