<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="35dp"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="35dp"
    android:background="@drawable/google_sign_in_button"
    android:gravity="center"
    android:padding="20dp"
    tools:context="ie.ul.postgrad.socialanxietyapp.screens.ChestViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/fab_margin"
                android:text="@string/active_chests"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/fab_margin"
                android:text="@string/active_chests_subtitle"
                android:textColor="@color/gray"
                android:textSize="16sp"/>


            <LinearLayout
                android:id="@+id/chest_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_margin="20dp"/>


            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/proceed" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

